# SPIRA-training

./: Dockerfile  Makefile  README.md  docker-compose.yml  poetry.toml  pyproject.toml
.github/workflow/: run_tests.yml
.github/workflows/: publish.yml  run_tests.yml
src/: main.py
src/spira-training/: hello-world.py
src/spira_training/: hello_world.py  main.py
src/spira_training/apps/: __init__.py
src/spira_training/domain/: training_pipeline.py  training_pipeline_service.py
tests/: base_test_model.py  fake_dataset_repository.py  fake_dataset_splitter.py  fake_model_trainer.py  test_audio_processor_factory.py  test_feature_engineering_service.py  test_hello_world.py  test_model_training_service.py  test_pytorch_model_trainer.py
tests/core/: test_audio_processor_factory.py  test_feature_engineering_service.py  test_model_training_service.py  test_pytorch_model_trainer.py
tests/fakes/: fake_audios_repository.py  fake_checkpoint_manager.py  fake_dataloader.py  fake_dataloader_factory.py  fake_dataset_repository.py  fake_dataset_splitter.py  fake_feature_engineering_config.py  fake_file_reader.py  fake_loss_calculator.py  fake_model.py  fake_model_trainer.py  fake_optimizer.py  fake_path_validator.py  fake_pytorch_audio_factory.py  fake_randomizer.py  fake_scheduler.py  fake_trained_models_repository.py  fake_wav_factory.py
tests/integration/: conftest.py  test_test_loss_calculator_smoke.py  test_train_loss_calculator_smoke.py
tests/ports/: test_pytorch_dataloader_factory.py  test_pytorch_model_trainer.py
tests/unit/: test_hello_world.py
(+188 files in other folders)
