[tool.poetry]
name = "spira-training"
version = "0.1.0"
description = ""
authors = ["Roberto Bolgheroni <robertobolgheroni@usp.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
pydantic = "^2.9.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.24.0"
torch = "^2.4.1"
torchaudio = "^2.4.1"
torchvision = "^0.19.1"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.379"


[tool.poetry.group.adapters.dependencies]
scikit-learn = "^1.5.2"

[tool.pytest.ini_options]
markers = [
    "asyncio",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
